[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viper-in-python"
version = "2.0.0"
description = "A package for VIPER-based Protein Activity analysis of transcriptomic data in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexander L.E. Wang & Luca Zanella & Zizhao Lin", email = "aw3436@cumc.columbia.edu"}
]

dependencies = [
    "scipy>=1.10.0",
    "tqdm",
    "scanpy",
    "anndata",
    "pandas",
    "numpy",
    "joblib",
    "statsmodels",
    "loompy",
    "igraph",
    "leidenalg",
    "pyarrow",
]

[project.urls]
Homepage = "https://github.com/alevax/pyviper"
Documentation = "https://alevax.github.io/pyviper/"
Source = "https://github.com/alevax/pyviper"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyviper*"]

[tool.setuptools.package-data]
pyviper = ["data/*"]
